Fix button color contrast

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ All colors MUST be HSL.
     --dark-navy: 220 75% 2%;
     --aqua: 180 100% 70%;
     --cyan: 189 94% 65%;
-    --green: 142 76% 50%;
+    --green: 142 76% 36%;
     --orange: 25 95% 58%;
     --electric-blue: 216 87% 70%;
     --violet: 263 70% 65%;
